Remove max height for post to stop comments overlapping post content

--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -1,5 +1,4 @@
 .post {
-    max-height: 1000px;
     color: black;
     margin: 15px;
 }
